Add subject swagger
